# sdk-python

./: .gitignore  LICENSE  README.md  STYLE_GUIDE.md  pyproject.toml  run.py
.github/workflows/: LAMBDA_LAYERS.md  LAMBDA_LAYERS_SOP.md  integration-test.yml  pr-and-push.yml  pr-sizer.yml  publish-lambda-layer  publish-lambda-layer.yml  publish-layer.yml  pypi-publish-on-release.yml  test-lint.yml  verify-dependency-compatibility.yml  verify-tools-compatibility.yml  yank-lambda-layer.yml
.sop/reviews/: community-pr-review-2025-12-23.md
src/: __init__.py  main.py  orchestrator.sop.md  orchestrator_prompt.py
src/strands/: __init__.py  _async.py
src/strands/agent/: __init__.py  agent.py
src/strands/event_loop/: _tool_and_model_retry.py
src/strands/multiagent/: base.py  graph.py  swarm.py
src/strands/tools/: decorator.py  registry.py  tools.py
src/strands/types/: tools.py
src/tools/: analyze_issue.py  analyze_issue_prompt.py  find_issues.py  find_issues_prompt.py  use_github.py
tests-integ/: test_bedrock_guardrails.py  test_mcp_client.py  test_mcp_stdio.py  test_model_litellm.py
tests/strands/: test_async.py
tests/strands/agent/: test_agent.py  test_agent_tool_retry.py
tests/strands/event_loop/: conftest.py  test_tool_retry.py
tests_integ/: conftest.py  test_function_tools.py  test_mcp_tool_provider.py  test_multiagent_graph.py  test_multiagent_swarm.py  test_session.py  test_summarizing_conversation_manager_integration.py  test_tool_context_injection.py
tests_integ/models/: test_model_bedrock.py
tests_integ/tools/: test_tool_retry.py
(+14 files in other folders)
