[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-community-pr-agent"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "ruff>=0.13.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src"
format = "ruff format src"
type-check = "mypy src"
test = "pytest tests"
check = ["lint", "type-check", "test"]

[tool.ruff]
line-length = 120
target-version = "py313"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
